# rust-intermediate-concurrency-workshop

./: .env  Cargo.toml  blog.db
blog_client/: Cargo.toml
blog_client/src/: main.rs
domain/: Cargo.toml
domain/src/: blog_post.rs
server/: Cargo.toml  README.md
server/src/: blog_client.rs  domain.rs  main.rs  router.rs  sqlx_client.rs
v1_init/: Cargo.toml
v1_init/src/: main.rs
v2_scoped_threads/: Cargo.toml
v2_scoped_threads/src/: main.rs
v3_all_cpus/: Cargo.toml
v3_all_cpus/src/: main.rs
v4_linear_speedup/: Cargo.toml
v4_linear_speedup/src/: main.rs
v5_shuffling/: Cargo.toml
v5_shuffling/src/: main.rs
v6_mutex_opti/: Cargo.toml
v6_mutex_opti/src/: main.rs
v7_rayon/: Cargo.toml
v7_rayon/src/: main.rs
v8_tokio/: Cargo.toml
v8_tokio/src/: main.rs
