[package]
name = "rust-nation-intermediate-workshop"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "blog_client", "domain",
    "server",
    "v1_init",
    "v2_scoped_threads",
    "v3_all_cpus",
    "v4_linear_speedup",
    "v5_shuffling",
    "v6_mutex_opti",
    "v7_rayon",
    "v8_tokio",
]

[dependencies]
