[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
serde = { version = "1.0.195", features = ["derive"] }
