[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.81"
axum = "0.7.4"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
